--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,21 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Gift Finder</title>
+    <title>Taskify</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow&display=swap" rel="stylesheet">
   </head>
   <body>
 
   <header class="header-banner">
-          <h1 class="header-text">Gift Finder</h1>
+          <h1 class="header-text">TaskiFy</h1>
           <span class="logout"></span>
  </header>
  <div class="under-header">
 
     <div id="signup-form">
            <form>
-               <h3>Sign Up or Login Asshole:</h3>
+               <h3>Sign Up or Login Here Loy:</h3>
                <input type="text" name="email" value="" placeholder="Username" class="signup-input">
                <br>
                <input type="password" name="password" value="" placeholder="Password" class="signup-input">
